[gd_scene load_steps=4 format=2]

[ext_resource path="res://entities/snake/Snake.gd" type="Script" id=1]
[ext_resource path="res://entities/snake/snake.png" type="Texture" id=2]
[ext_resource path="res://entities/snake/PlayerInputComponent.gd" type="Script" id=3]

[node name="Snake" type="Node2D" groups=[
"Player",
]]
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
modulate = Color( 1, 0.980392, 0.4, 1 )
scale = Vector2( 1.5, 1.5 )
texture = ExtResource( 2 )

[node name="PlayerInputComponent" type="Node" parent="."]
script = ExtResource( 3 )

[node name="MoveDelay" type="Timer" parent="."]
wait_time = 0.15
one_shot = true
autostart = true

[connection signal="timeout" from="MoveDelay" to="." method="_on_MoveDelay_timeout"]
